Fix: Wishlist Demo JS file name error fixed.

--- a/WishList Demo/WishListDemo.html
+++ b/WishList Demo/WishListDemo.html
@@ -59,6 +59,6 @@
     <h2>Items</h2>
     <ul id="item-list"></ul>
 
-    <script src="editingItem.js" defer></script>
+    <script src="wishList.js" defer></script>
   </body>
 </html>
